src/app/globals.css
/* @import "tailwindcss"; */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

:root {
  --background: #000;
  --foreground: #171717;
  --bg-white: #fff;
  --bg-black: #000;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.hero-canvas-sec,
.know-split-sec,
.product-sec,
.luxury-main,
.creative-sec,
.watch-sec,
.testi-sec,
.form-sec {
  height: 100%;
}



/* //////////////////Navbar Start/////////////// */
.navbar {
  padding-top: 10px;
}

.navbar-collapse {
  flex-grow: 0;
}


.navbar .nav-link {
  text-decoration: none;
  color: var(--bg-white);
  position: relative;
  transition: transform, color .5s ease-in-out;

}

.navbar .nav-link::before,
.navbar .nav-link::after {
  content: "";
  position: absolute;
  background-color: #ffffff9c;
  transition: transform .5s;
}

.navbar .nav-link::after {
  left: 0;
  width: 100%;
  height: 1px;
  bottom: 7px;
  transform: scaleX(0);
  transform-origin: left;
}

.navbar .nav-link:hover::after {
  transform: scaleX(1);
}

.navbar .nav-link:hover {
  color: #ffffff9c;
}

.hover-link::before,
.hover-link::after {
  content: "";
  position: absolute;
  background-color: #ffffff9c;
  transition: transform .5s;
}

.hover-link::after {
  left: 0;
  width: 100%;
  height: 1px;
  bottom: 7px;
  transform: scaleX(0);
  transform-origin: left;
}

.hover-link:hover::after {
  transform: scaleX(1);
}

.hover-link:hover {
  color: #ffffff9c;
}


.navbar-expand-lg .navbar-nav {
  gap: 40px;
}

.theme-btn {
  padding: 6px 25px;
  border-radius: 5px;
  border: 1px solid var(--bg-white);
  color: var(--bg-white);
  text-decoration: none;
  font-family: Arial, Helvetica, sans-serif;
}

nav .side-box {
  gap: 30px;
  display: flex;
  align-items: center;
  justify-content: end;
  width: 20%;
}

nav .side-box p {
  margin: 0;
  cursor: pointer;
}

nav .side-box svg {
  color: #fff;
  font-size: 25px;
  transition: all .5s ease-in-out;
}

nav .side-box svg:hover {
  color: #ffffff9c;
}

/* //////////////Navbar End///////////// */

/* ////////////////Hero Start///////////// */
.hero-sec {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}


.hero-video-bg {
  position: relative;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 0;
  opacity: .5;
}


@keyframes bg-zoom {
  0% {
    background-size: 0%;
  }

  50% {
    background-size: 95%;
  }

  100% {
    background-size: 100%;
  }
}

.animated-text {
  font-size: 120px;
  font-weight: 700;
  color: #fff;
  display: flex;
  overflow: hidden;
  line-height: 1;
}

.char {
  display: inline-block;
  opacity: 0;
  will-change: transform, opacity;
}

.hero-sec h1 {
  font-size: 110px;
  letter-spacing: 67px;
  text-transform: uppercase;
  color: var(--bg-white);
  font-family: Times New Roman, Times, serif;
  text-align: center;
}

/* ////////////////Hero End///////////// */

/* ////////////////Know Start/////////// */
.know-sec {
  height: 100vh;
  padding: 10% 0 10%;
  background: none;
  /* ← strip bg from section */
  position: relative;
  overflow: hidden;
  background-image: url(/images/know-bg.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}



.know-sec h2 {
  color: #fff;
  font-size: 70px;
  font-family: Times New Roman, Times, serif;
}

.know-sec p {
  color: #fff;
  margin-bottom: 15px;
  font-family: Poppins, sans-serif;
  font-size: 16.6px;
  font-weight: 200;
  line-height: 2;
}

.know-sec .theme-btn {
  padding: 12px 25px;
}

/* ////////////////Know End/////////// */

/* ////////////////Product Start/////////// */
.product-sec {
  padding: 5% 0 4%;
  background-color: #000;
}

.product-sec .cards-link {
  text-decoration: none;
}

.product-sec .pro-card.mg img {
  margin-bottom: 40px;
}

.swiper-pagination {
  text-align: center;
  margin-top: 50px;
}

.swiper-pagination .swiper-pagination-bullet {
  width: 13px;
  height: 10px;
  display: inline-block;
  background: #fff;
  opacity: 0.2;
  margin: 0 5px;
  border-radius: 20px;
  transition: opacity 0.5s, background-color 0.5s, width 0.5s;
  transition-delay: 0.5s, 0.5s, 0s;
}

.swiper-pagination-clickable .swiper-pagination-bullet {
  cursor: pointer;
}

.swiper-pagination .swiper-pagination-bullet-active {
  opacity: 1;
  background: #ffffff;
  width: 100px;
  transition-delay: 0s;
}

.swiper-slide {
  margin-bottom: 40px;
}

.product-sec .row {
  --bs-gutter-x: 2.5rem;
}

.product-sec h2 {
  color: #fff;
  font-size: 55px;
  text-align: center;
  font-family: Times New Roman, Times, serif;
  margin: 51px 0 0;
}

.product-sec .pro-card {
  border: 1px solid gray;
  border-radius: 20px;
  margin: 50px 15px 15px;
  flex-direction: column;
  align-items: center;
  padding: 70px 35px 35px 35px;
  display: flex;
  background-color: #000000c9;
  overflow: hidden;
  transition: all 0.5s ease-in-out;
}

.product-sec .pro-card img {
  width: 65%;
  margin-bottom: 30px;
}

.product-sec .pro-card .details {
  padding: 32px 22px;
  border-radius: 20px;
  background-color: #ffffff29;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  display: flex;
}

.product-sec .pro-card .details h6 {
  color: #fff;
  margin-bottom: 3px;
  font-weight: 200;
  font-family: Poppins, sans-serif;
  font-size: 16px;
}

.product-sec .pro-card .details h5 {
  color: #fff;
  margin-bottom: 0;
  font-weight: 200;
  font-family: Poppins, sans-serif;
  font-size: 24px;
}
/* ... */

